lib/tests/fixtures/compiler/parser/break_at_top.baseline
Error: break_at_top.pp:1:1: break statement must be used from within a block.
  break
  ^~~~~
